--- a/Atividades Iniciais/Primeiros Codigos.ipynb
+++ b/Atividades Iniciais/Primeiros Codigos.ipynb
@@ -2,14 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá Antonio Carlos Seja Bem Vindo\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "nome = \"Antonio Carlos\"\n",
+    "print(\"Olá\", nome, \"Seja Bem Vindo\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
