Atualização de atividades, e adição do README

--- a/Atividades Iniciais/Capitulo02_Aula01.ipynb
+++ b/Atividades Iniciais/Capitulo02_Aula01.ipynb
@@ -34,7 +34,7 @@
     "# Imprime na tela os valores das listas\n",
     "print(\"Resultado Final\")\n",
     "print(\"Menores:\", menores)\n",
-    "#print(\"Maiores:\", maiores)gi"
+    "print(\"Maiores:\", maiores)"
    ]
   }
  ],
