Atualização do curso, e adição da aula 2 do 3 capitulo

--- a/Atividades Iniciais/Capitulo02_Aula01.ipynb
+++ b/Atividades Iniciais/Capitulo02_Aula01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -47,14 +47,19 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0af4c6a24b7121dcde6fe4bcb6048dcad0f2bacb95c70a977625015ebf76ff0b"
+   }
   }
  },
  "nbformat": 4,
