--- a/Atividades Iniciais/Capitulo03_Aula01.ipynb
+++ b/Atividades Iniciais/Capitulo03_Aula01.ipynb
@@ -251,6 +251,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0af4c6a24b7121dcde6fe4bcb6048dcad0f2bacb95c70a977625015ebf76ff0b"
+   }
   }
  },
  "nbformat": 4,
