--- a/Atividades Iniciais/Capitulo03_Aula02.ipynb
+++ b/Atividades Iniciais/Capitulo03_Aula02.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capitulo 3, Aula 2 - Operadores dos tipos primitivos de dados."
+    "## Capitulo 3, Aula 2 - Operadores dos tipos primitivos de dados."
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores Aritméticos"
+    "### Operadores Aritméticos"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores de Comparação"
+    "### Operadores de Comparação"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores Lógicos"
+    "### Operadores Lógicos"
    ]
   },
   {
